--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Weather App" />
+    <meta name="title" property="og:title" content="Weather App" />
+    <meta property="og:type" content="Website" />
+    <meta 
+        name="image" 
+        property="og:image" 
+        content="https://live.staticflickr.com/65535/51036562758_b0264cfb16_z.jpg" 
+    />
+    <meta 
+        name="description" 
+        property="og:description" 
+        content="Weather App" 
+    />
+    <meta 
+        name="author" 
+        content="Xuan Le" />
     <link rel="stylesheet" href="bootstrap.css"><!--Bootswatch-->
     <title>WeatherJS</title>
     <style>
